2006-02-13  Benjamin Herrenschmidt <benh@kernel.crashing.org>

	* Xprint/Util.c: (XpOpenTmpFile):
	HAS_MKSTEMP vs. HAVE_MKSTEMP (From Fredrik Höglund)

2006-02-13  Benjamin Herrenschmidt <benh@kernel.crashing.org>

	* cfb/Makefile.am:
	* cfb16/Makefile.am:
	* cfb32/Makefile.am:
	* hw/xfree86/fbdevhw/fbdevhw.c:
	* hw/xfree86/os-support/linux/int10/linux.c:
	* hw/xfree86/os-support/linux/int10/vm86/linux_vm86.c:
	Fix linux build without libc wrappers (From Fredrik
	Höglund)

2006-02-13  Benjamin Herrenschmidt <benh@kernel.crashing.org>

	* hw/kdrive/src/kdrive.c: (ddxInitGlobals):
	* hw/vfb/InitOutput.c:
	* hw/xfree86/common/xf86Init.c: (OsVendorInit):
	* hw/xnest/Init.c:
	* os/osinit.c: (OsInit):
	Move call to xf86WrapperInit() to OsVendorInit() in xf86Init.c and
	remove stubs in other DDX.

2006-02-12  Eric Anholt  <anholt@FreeBSD.org>

	reviewed by: keithp (in principle)

	* render/picture.c: (ReduceCompositeOp), (CompositePicture):
	Simplify ops that would use the alpha channel when an alpha channel is
	always 1.0, and short circuit PictOpDst for good measure.

2006-02-12  Eric Anholt  <anholt@FreeBSD.org>

	* hw/kdrive/linux/Makefile.am:
	* hw/kdrive/src/Makefile.am:
	* include/kdrive-config.h.in:
	Add missing HAVE_DIX_CONFIG_H which caused issues with mismatched screen
	structure interpretations, and remove a bunch of unused junk from
	kdrive-config.h.  Xephyr almost works on my amd64.

2006-02-11  Eric Anholt  <anholt@FreeBSD.org>

	* hw/vfb/InitOutput.c: (xf86WrapperInit):
	* hw/xnest/Init.c: (xf86WrapperInit):
	Add stub xf86WrapperInits so that the servers will build even if os/ was
	built with XFree86LOADER set.

2006-02-11  Alan Coopersmith  <alan.coopersmith@sun.com>

	* Xext/xres.c: 
	* afb/afbline.c:
	* fb/fbblt.c:
	* hw/dmx/config/scanner.l:
	Add <string.h>, <stdlib.h>, and <stdio.h> to clear undefined function
	warnings after the removal of libcwrapper headers.

2006-02-11  Alan Coopersmith  <alan.coopersmith@sun.com>	

	* cfb/cfbfillarc.c: