@@ -1,3 +1,8 @@
+2006-02-13  Adam Jackson  <ajax@freedesktop.org>
+
+	* render/picture.c:
+	Further op reduction when both src and dst alpha are absent.
+
 2006-02-13  Benjamin Herrenschmidt <benh@kernel.crashing.org>
 
 	* Xprint/Util.c: (XpOpenTmpFile):
